--- a/machineinfo/templates/deployment.yaml
+++ b/machineinfo/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
           ports:
             - name: http
               containerPort: 9000
-              targetPort: "{{ .Values.service.targetPort }}"
+              targetPort: 9000
               protocol: TCP
           livenessProbe:
             httpGet:
